# vexl-android

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  README_template.md  build.gradle  detekt-baseline.xml  gradle.properties  localization.json  release_notes.txt  settings.gradle
app/: .gitignore  build.gradle  debug.keystore  google-services.json  lint.xml
app/src/main/: AndroidManifest.xml
cache/: build.gradle
cache/schemas/cz.cleevio.cache.CleevioDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
cache/src/main/: AndroidManifest.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
chat/: build.gradle
chat/src/main/: AndroidManifest.xml
config/detekt/: detekt.yml
contacts/: build.gradle
contacts/src/main/: AndroidManifest.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
cryptography/: build.gradle
cryptography/src/main/: AndroidManifest.xml
cryptography/src/main/cpp/: CMakeLists.txt  aes.cpp  converters.cpp  converters.h  convertors.cpp  convertors.h  cryptography.cpp  ecdsa.cpp  ecies.cpp  hmac.cpp  key_pair.cpp  sha.cpp
gradle/dependency-graph/: project.dot
gradle/wrapper/: gradle-wrapper.properties
lightbase/: build.gradle
lightbase/src/main/: AndroidManifest.xml
marketplace/: build.gradle
marketplace/src/main/: AndroidManifest.xml
network/: build.gradle
network/src/main/: AndroidManifest.xml
onboarding/: build.gradle
onboarding/src/main/: AndroidManifest.xml
pin/: build.gradle
pin/src/main/: AndroidManifest.xml
profile/: build.gradle
repository/: build.gradle
resources/: build.gradle
(+1283 files in other folders)
